# gwa3

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  KANBAN.md  README.md  temp_run_merchant_stages.ps1
bots/arachnis_haunt/: ArachnisHaunt.cpp  ArachnisHaunt.h  ArachnisHauntBot.cpp  ArachnisHauntBot.h
bots/common/: BotFramework.cpp  BotFramework.h  BotModuleRegistry.cpp  BotModuleRegistry.h  BotModuleSelector.cpp  BotModuleSelector.h  DungeonBotStates.cpp  DungeonBotStates.h
bots/froggy/: FroggyHM.cpp  FroggyHM.h  FroggyHMAggroCombatRuntime.h  FroggyHMAggroMoveBogrootLoop.h  FroggyHMAggroMoveRuntime.h  FroggyHMAggroMoveStandardLoop.h  FroggyHMBlessing.h  FroggyHMBossChestSupport.h  FroggyHMBossDialogHelpers.h  FroggyHMBossDialogSupport.h  FroggyHMBossPostRewardSupport.h  FroggyHMBossWaypointHandler.h  FroggyHMCheckpointReplay.h  FroggyHMCombatSkillUse.h  FroggyHMCombatState.h  FroggyHMCombatTrace.h  FroggyHMConfig.h  FroggyHMDebugCombat.h  FroggyHMDebugCombatDump.h  FroggyHMDebugDungeonLoop.h  FroggyHMDebugMovement.h  FroggyHMDungeonLoopRuntime.h  FroggyHMDungeonState.h  FroggyHMErrorState.h  FroggyHMLocalClearRuntime.h  FroggyHMLocalClearSupport.h  FroggyHMLootAndDoors.h  FroggyHMLvl2TransitionWaypoint.h  FroggyHMMaintenance.h  FroggyHMMerchantStates.h  FroggyHMMovementCombatRuntime.h  FroggyHMRoutePolicy.h  FroggyHMRoutes.cpp  FroggyHMRoutes.h  FroggyHMTekksEntry.h  FroggyHMTekksEntryDiagnostics.h  FroggyHMTekksEntryQuestFlow.h  FroggyHMTownStates.h  FroggyHMTransitionRuntime.h  FroggyHMTransitions.h  (+5 more)
bots/frostmaws_burrows/: FrostmawsBurrows.cpp  FrostmawsBurrows.h  FrostmawsBurrowsBot.cpp  FrostmawsBurrowsBot.h
bots/kathandrax/: Kathandrax.cpp  Kathandrax.h  KathandraxBot.cpp  KathandraxBot.h
bots/ravens_point/: RavensPoint.cpp  RavensPoint.h  RavensPointBot.cpp  RavensPointBot.h
bots/rragars_menagerie/: RragarsMenagerie.cpp  RragarsMenagerie.h  RragarsMenagerieBot.cpp  RragarsMenagerieBot.h
bridge/: README.md  __main__.py  agent_loop.py  chat_interface.py  config.py  dungeon_runs.py  farming_knowledge.py  gamedata.py  generate_gamedata.py  ipc_client.py  kamadan_client.py  llm_client.py  observation.py  requirements.txt  tool_schema.py
bridge/tests/: TEST_EXECUTION_GUIDE.md  __main__.py  base.py  helpers.py  runner.py  test_a_ipc.py  test_b_observations.py  test_c_actions.py  test_d_validation.py  test_e_orchestrated.py
config/: gwa3.ini.example
config/hero_configs/: Standard.txt.example
include/gwa3/bot/: BotFramework.h  FroggyHM.h
include/gwa3/core/: CallbackRegistry.h  CrashDiag.h  DialogHook.h  GameThread.h  Hook.h  HookMarker.h  Log.h  Memory.h  Offsets.h  RenderHook.h  RuntimeWatchdog.h  Scanner.h  SmokeTest.h  TargetLogHook.h  TradePartnerHook.h  TraderHook.h
include/gwa3/dungeon/: DungeonBuiltinCombat.h  DungeonBundle.h  DungeonCheckpoint.h  DungeonCombat.h  DungeonCombatRoutine.h  DungeonDiagnostics.h  DungeonDialog.h  DungeonEffects.h  DungeonEntryRecovery.h  DungeonInteractions.h  DungeonInventory.h  DungeonItemActions.h  DungeonItemPolicy.h  DungeonLoot.h  DungeonNavigation.h  DungeonOutpostSetup.h  DungeonQuest.h  DungeonQuestRuntime.h  DungeonRoute.h  DungeonRouteRunner.h  DungeonRuntime.h  DungeonSkill.h  DungeonTravel.h  DungeonVendor.h
include/gwa3/game/: Agent.h  Camera.h  DialogIds.h  Effect.h  GameTypes.h  Guild.h  Item.h  ItemModelIds.h  Map.h  MapIds.h  NPC.h  Party.h  Player.h  Quest.h  QuestIds.h  Skill.h  SkillIds.h  Title.h
include/gwa3/llm/: ActionExecutor.h  EventPush.h  GameSnapshot.h  IpcServer.h  LlmBridge.h
include/gwa3/managers/: AgentMgr.h  CameraMgr.h  ChatLogMgr.h  ChatMgr.h  CraftMgr.h  DialogMgr.h  EffectMgr.h  EventMgr.h  FriendListMgr.h  GameThreadMgr.h  GuildMgr.h  ItemMgr.h  MaintenanceMgr.h  MapMgr.h  MemoryMgr.h  MerchantMgr.h  PartyMgr.h  PlayerMgr.h  QuestMgr.h  RenderMgr.h  SkillMgr.h  SkillbarMgr.h  StoCMgr.h  TradeMgr.h  UIMgr.h
include/gwa3/packets/: CtoS.h  CtoSHook.h  Headers.h
include/gwa3/testing/: TestFramework.h
include/gwa3/utils/: EncStringCache.h  StringEncoding.h
memory/: feedback_injection_constraints.md  project_renderhook_crash.md
src/: dllmain.cpp
src/bot/: BotFramework.cpp  FroggyHM.cpp
src/core/: CallbackRegistry.cpp  GameThread.cpp  Log.cpp  Memory.cpp  Offsets.cpp  RenderHook.cpp  Scanner.cpp  TargetLogHook.cpp  TraderHook.cpp
src/gwa3/: dllmain.cpp
src/gwa3/core/: CallbackRegistry.cpp  CrashDiag.cpp  DialogHook.cpp  GameThread.cpp  HookMarker.cpp  Log.cpp  Memory.cpp  Offsets.cpp  RenderHook.cpp  RuntimeWatchdog.cpp  Scanner.cpp  TargetLogHook.cpp  TradePartnerHook.cpp  TraderHook.cpp
src/gwa3/dungeon/: DungeonBuiltinCombat.cpp  DungeonBundle.cpp  DungeonCheckpoint.cpp  DungeonCombat.cpp  DungeonCombatRoutine.cpp  DungeonDiagnostics.cpp  DungeonDialog.cpp  DungeonEffects.cpp  DungeonEntryRecovery.cpp  DungeonInteractions.cpp  DungeonInventory.cpp  DungeonItemActions.cpp  DungeonItemPolicy.cpp  DungeonLoot.cpp  DungeonNavigation.cpp  DungeonOutpostSetup.cpp  DungeonQuest.cpp  (+7 more)
src/llm/: ActionExecutor.cpp  EventPush.cpp  GameSnapshot.cpp  IpcServer.cpp  LlmBridge.cpp
src/managers/: AgentMgr.cpp  CameraMgr.cpp  ChatLogMgr.cpp  ChatMgr.cpp  DialogMgr.cpp  EffectMgr.cpp  FriendListMgr.cpp  GuildMgr.cpp  ItemMgr.cpp  MapMgr.cpp  MemoryMgr.cpp  PartyMgr.cpp  PlayerMgr.cpp  QuestMgr.cpp  SkillMgr.cpp  StoCMgr.cpp  TradeMgr.cpp  UIMgr.cpp
src/packets/: CtoS.cpp  CtoSHook.cpp
src/tests/: BehavioralTest.cpp  BotFrameworkTest.cpp  INTEGRATION_TESTS.md  IntegrationTest.cpp  IntegrationTestAdvanced.cpp  IntegrationTestEpic14.cpp  IntegrationTestGameplay.cpp  IntegrationTestInternal.h  IntegrationTestIntrospection.cpp  IntegrationTestOffsets.cpp  IntegrationTestSession.cpp  IntegrationTestSupport.cpp  IntegrationTestSystems.cpp  IntegrationTestWorld.cpp  SmokeTest.cpp
src/utils/: EncStrCodec.cpp  StringEncoding.cpp
tests/: main.cpp  test_headers.cpp  test_scanner_logic.cpp  test_string_encoding.cpp  test_struct_offsets.cpp
tools/: capture_screen.ps1  injector.cpp  pattern_test.cpp  run_froggy_test.ps1  run_integration_test.ps1  run_workflow_test.ps1
(+28 files in other folders)
